--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,15 @@
     background-color: #2a2b32;
     border-radius: 12px;
     padding: 2rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 5rem;
+}
+
+.house{
+    background-color: white;
+    color: black;
+    padding: 2rem;
+    text-align: center;
 }
