--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,180 @@
     width: 100%;
 }
 
-.graph{
+main{
+    display: flex;
+    flex-direction: row;
     height: 810px;
     width: 1440px;
-    background-color: #2a2b32;
+    background-color: #313244;
     border-radius: 12px;
-    padding: 2rem;
+}
+
+.graph{
+    position: relative;
+    height: 810px;
+    width: 1440px;
+    
+    padding: 2rem 3rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-end;
-    gap: 5rem;
+
+    flex: 3
+}
+
+.graph::after{
+    content: '';
+    position: absolute;
+    bottom: 5%;
+    right: 0;
+    height: 90%;
+    width: 4px;
+    border-radius: 4px;
+    background-color: #cdd6f4;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    padding: 2rem;
+}
+
+.info h1{
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 700;
+}
+
+.house-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 8rem;
+    gap: 2rem;
+    font-size: 1.25rem;
 }
 
 .house{
-    background-color: white;
-    color: black;
-    padding: 2rem;
-    text-align: center;
+    width: 8rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+    gap: 0;
 }
+
+.house:hover {
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.house:hover .windows{
+    opacity: 0;
+}
+
+.windows{
+    padding: 1rem 0;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem 0.75rem;
+    pointer-events: none;
+    opacity: 1;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+    overflow: hidden;
+
+}
+
+.window{
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #313244;
+    border-radius: 4px;
+}
+
+.window.tilted{
+    transform: rotate(45deg);
+}
+
+.growth{
+    position: absolute;
+    bottom: -1rem;
+    right: -1rem;
+    height: min-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    background-color: #cdd6f450;
+    border: #cdd6f4 1px solid;
+    backdrop-filter: blur(4px);
+    border-radius: 4px;
+}
+
+.growth img{
+    width: 2rem;
+}
+
+.flats_0_60{
+    background-color: #cba6f7;
+    border-radius: 0 0 4px 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.flats_0_60:hover{
+    box-shadow: #cba6f7cc 0 0 8px 2px;
+    border-radius: 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.flats_60_90{
+    background-color: #74c7ec;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.flats_60_90:hover{
+    box-shadow: #74c7eccc 0 0 8px 2px;
+    border-radius: 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.flats_90_150{
+    background-color: #a6e3a1;
+}
+
+.flats_90_150:hover{
+    box-shadow: #a6e3a1cc 0 0 8px 2px;
+    border-radius: 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.flats_150{
+    background-color: #eba0ac;
+    border-radius: 4px 4px 0 0 ; 
+}
+
+.flats_150:hover{
+    box-shadow: #eba0accc 0 0 8px 2px;
+    border-radius: 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
+.unknown{
+    background-color: #6c7086;
+    
+}
+
+.unknown:hover{
+    box-shadow: #6c708688 0 0 8px 2px;
+    border-radius: 4px;
+    transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
+}
+
