--- a/src/App.css
+++ b/src/App.css
@@ -39,18 +39,9 @@ main{
     background-color: #cdd6f4;
 }
 
-.info{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    flex: 1;
-    padding: 2rem;
-}
-
-.info h1{
-    font-size: 2rem;
-    text-align: center;
-    font-weight: 700;
+.flats span{
+    font-size: 1.8rem;
+    font-weight: 300;
 }
 
 .house-container{
@@ -174,7 +165,6 @@ main{
 
 .unknown{
     background-color: #6c7086;
-    
 }
 
 .unknown:hover{
@@ -183,3 +173,191 @@ main{
     transition: all 0.3s cubic-bezier(.14, .8, .4, 1);
 }
 
+.info{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    padding: 2rem;
+}
+
+.info-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+    background-color: #45475a;
+    padding: 0.5rem;
+    border-radius: 8px;
+    
+
+}
+
+.info h1{
+    font-size: 2.5rem;
+    font-weight: 100;
+    height: 77px;
+    position: relative;
+}
+
+.flats span{
+    color: #b4befe;
+}
+
+.info h1::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #cdd6f4;
+    border-radius: 4px;
+    bottom: 0;
+    position: absolute;
+}
+
+.info .flats{
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    flex-direction: column;
+    font-weight: 700;
+}
+
+.flat-sizes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    flex-direction: column;
+    background-color: #45475a;
+    border-radius: 8px;
+    padding: 0.5rem 1rem 1rem 1rem;
+}
+
+.flat-sizes > div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.size{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    flex-direction: column;
+    color: #313244;
+    padding: 0.5rem 0;
+}
+
+.info_0_60{
+    background-color: #cba6f7;
+    border-radius: 4px 0 0 0;
+}
+.info_60_90{
+    background-color: #74c7ec;
+    border-radius: 0 4px 0 0;
+}
+
+.info_90_150{
+    background-color: #a6e3a1;
+}
+
+.info_150{
+    background-color: #eba0ac;
+}
+
+.info_unknown{
+    background-color: #6c7086;
+    border-radius: 0 0 4px 4px;
+    padding: 0.5rem 0;
+    width: 100%;
+    color:#cdd6f4;
+}
+
+.categories{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    flex-direction: column;
+    background-color: #45475a;
+    border-radius: 8px;
+    padding: 0.5rem;
+}
+
+.categories > div{
+    display: flex;
+    width: 100%;
+}
+
+.category{
+    width: 33%;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.info_shape{
+    background-color: #b4befe;
+    width: 2rem;
+    height: 2rem;
+}
+
+.offices > .info_shape{
+    border-radius: 20rem;
+}
+
+.industrial > .info_shape{
+    rotate: 45deg;
+    scale: 0.69;
+}
+
+.info_growth{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    background-color: #45475a;
+    border-radius: 8px;
+    padding: 0.5rem;
+    flex-direction: column;
+}
+
+h3{
+    font-size: 0.9rem;
+}
+
+.growth_icon{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.growth_icon.positive .growth {
+    background-color: #a6e3a180;
+    border: #a6e3a1 1px solid;
+}
+
+.growth_icon.negative .growth {
+    background-color: #eba0ac80;
+    border: #eba0ac 1px solid;
+}
+
+.growth.normal{
+    position: relative;
+    bottom: 0;
+    right: 0;
+}
+
+.growth.normal img{
+    width: 1.25rem;
+}
